--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # The ID of your GitHub App
 APP_ID=
+APP_PRIVATE_KEY=
 WEBHOOK_SECRET=development
 
 # Use `trace` to get verbose logging or `info` to show less
@@ -7,3 +8,6 @@ LOG_LEVEL=debug
 
 # Go to https://smee.io/new set this to the URL that you are redirected to.
 WEBHOOK_PROXY_URL=
+
+# Database url for statemarketdeals
+AWS_READONLY_DATABASE_URL=
